--- a/css/style.css
+++ b/css/style.css
@@ -21,45 +21,17 @@ header.principal-inicio{
    
     
 }
-nav{
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    width: 100%;
-    padding: 15px 6px;
-    display: flex;
-    align-items:center;
-    justify-content: flex-end;
- 
+.bg-css{
+  background-color: #5e3939;
 }
-nav .logo{
-    width: 50px;
-    transform: rotate(90deg);
+.bg-colores{
+    color: #fcfcfc;
 }
-
-nav ul li {
-    list-style: none;
-    margin: 5px 15px;
-    display: inline-block;
-   
-
-}
-nav ul li a {
-    text-decoration: none;
-    color: #fff;
-}
-.logo-navegacion{
-   
-    width: 20px;
-    margin: 10px 10px;
-
-
-}
-
 
 .titulo{
     color: #fff;
     font-size: 70px;
+    font-weight: 600;
     position: absolute;
     top: 30%;
     left: 30%;
@@ -87,14 +59,16 @@ section article{
 }
 
 
-button {
+.boton-principal {
     background-color: #000000;
     color: #fff;
-    padding: 5px 5px;
+    padding: 3px 3px;
     border: solid black;
     margin: 10px;
     margin-bottom: 20px;
     border-radius: 7px;
+    font-weight: 200;
+    font-size: 13px;
     
 }
 footer h3{
@@ -102,8 +76,9 @@ footer h3{
     font-weight:lighter;
     margin: 30px;
     margin-right: 200px;
-    margin-left: 300px;
-   
+    margin-left: 200px;
+    font-size: 20px;
+
 
 }
 footer{
@@ -136,21 +111,17 @@ header.nuestra-historia{
 }
 
 .logo-chocolate{
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     transform: rotate(90deg);
-    margin-bottom: -13px;
-    margin-left: 30px;
-   
- 
+    
 
 }
 .logo-chocolate1{
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     transform: rotate(90deg);
-    margin-bottom: -13px;
-    margin-left: 30px;
+    
 }
 
 
@@ -253,7 +224,7 @@ header.nuestra-historia{
     margin-top: 50px;
     margin-left: 70px;
     margin-bottom: 50px;
-    
+    font-size: 22px;
 
 }
 
@@ -309,7 +280,7 @@ header.principal-chocolate{
     font-size:13px;
     margin-bottom: 30px;
     margin-left: 10px;
-    margin-top: 0px;
+    margin-top: 10px;
     text-align: left;
     color: rgb(78, 51, 43);
     
@@ -471,6 +442,155 @@ button {
 
     }
     
+}
+@media(max-width:320px){
+    .titulo{
+        font-size: 33px;
+        top: 13%;
+        left: 20%;
+    }
+    header.principal-inicio{
+        height: 180px;
+
+    }
+    nav ul li {
+        
+        margin: 1px 1px;
+    
+    }
+    nav ul li a {
+        font-size: 10px;
+    }
+    .logo-navegacion{
+        width: 5px;
+    }
+    .logo-chocolate1{
+        width: 25px;
+        height: 25px;
+        margin-left: 15px;
+        margin-top: 13px;
+    }
+
+    footer h3{
+        
+        margin-right: 15px;
+        margin-left: 37px;
+        font-size: 12px;
+    
+    }
+    .secundario-inicio{
+
+        font-size: 14px;
+        width: 70%;
+        margin-top: 50px;
+        
+    }
+    .parrafo-inicio{
+        width: 90%;
+        font-size: 10px;
+        line-height: 20px;
+        padding: 10px 10px;
+    }
+    button {
+        font-size: 10px;
+        padding: 4px 4px;
+        margin: 5px;
+        margin-bottom: 15px;
+        border-radius: 7px;
+        
+    }
+    .logo{
+        display: none;
+    }
+    
+    
+    header.nuestra-historia{
+        height: 180px;
+    }
+    .titulo-nuestra{
+        font-size: 25px;
+        top: 15%;
+        left: 20%;
+    }
+    .h2-nuestra{
+        font-size: 14px;
+        margin-bottom: 20px;
+
+    }
+    .parrafo-inicio-nuestra{
+        width: 90%;
+    font-size: 10px;
+    line-height: 20px;
+    margin-bottom: 35px;
+    padding: 10px 10px;
+    }
+    .la-receta{
+        margin: 10px;
+        padding-bottom: 20px;
+        font-size: 25px;
+    
+        
+    
+    }
+    .parrafo-nuestrah{
+        font-size: 10px;
+        width: 100%;
+        height: 450px;
+        padding: 10px 10px;
+        line-height: 25px;
+    
+        
+    
+    }
+    .titulo-secundario{
+        font-size: 35px;
+        position: absolute;
+        top: 20%;
+        left: 20%;
+
+        
+    }
+    header.principal-chocolate{
+        height: 180px;
+    }
+    
+    .gluten-free{
+        width: 30px;
+        top:23% ;
+        left: 80%;
+        
+
+    }
+    .titulo-para-el-te{
+        font-size: 35px;
+        top: 20%;
+        left: 25%;
+    }
+    
+    .inicio-chocolate{
+        font-size: 15px;
+        margin-top: 45px;
+        margin-left: 45px;
+        margin-bottom: 10px;
+
+    
+    }
+    .grid-container{
+        
+        grid-template-columns:  repeat(2, 1fr);
+        
+    }
+    .productos h3{
+        font-size:10px;
+        
+    }
+    
+    .productos p{
+        font-size: 10px;
+
+    }
+    
+
 }
 
 
