--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body{
    
 }
 
-header.principal-inicio{
+.principal-inicio{
     background-image:linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),  url("../img/jason-leung-3ftFEjJo7u0-unsplash.jpg");
     background-position:center;
     background-size: cover;
@@ -23,6 +23,7 @@ header.principal-inicio{
 }
 .bg-css{
   background-color: #5e3939;
+  z-index: 10;
 }
 .bg-colores{
     color: #fcfcfc;
@@ -94,7 +95,7 @@ footer{
     
 }
 
-header.nuestra-historia{
+.nuestra-historia{
     background-image:url("../img/cacao-corazón-chocolate-riesgo-cardiovascular.jpeg");
     background-position:center;
     background-size: cover;
@@ -102,21 +103,8 @@ header.nuestra-historia{
     width: 100%;
     height: 500px;
 }
-.logo{
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-    font-size: 20px;
 
-}
 
-.logo-chocolate{
-    width: 30px;
-    height: 30px;
-    transform: rotate(90deg);
-    
-
-}
 .logo-chocolate1{
     width: 40px;
     height: 40px;
@@ -228,7 +216,7 @@ header.nuestra-historia{
 
 }
 
-header.principal-chocolate{
+.principal-chocolate{
     background-color:rgb(107, 72, 61) ;
     width: 100%;
     height: 400px;
@@ -300,12 +288,42 @@ header.principal-chocolate{
 }
 
 @media(max-width:1024px){
+    .titulo{
+        top: 40%;
+        left: 26%;
+    }
+    
     footer h3{
         
         margin-right: 120px;
         margin-left: 170px;
     
     }
+    .titulo-nuestra{
+        font-size: 70px;
+        top: 40%;
+        left: 24%;
+    }
+    .titulo-secundario{
+        font-size: 75px;
+        position: absolute;
+        top: 30%;
+        left: 30%;
+        
+    }
+    
+    .gluten-free{
+        width: 50px;
+        top:35% ;
+        left: 70%;
+
+    }
+    .titulo-para-el-te{
+        font-size: 75px;
+        top: 30%;
+        left: 34%;
+    }
+
 
 
 }
@@ -316,28 +334,22 @@ header.principal-chocolate{
         top: 30%;
         left: 23%;
     }
-    header.principal-inicio{
+    .principal-inicio{
         height: 400px;
 
     }
-    nav ul li a {
-        font-size: 13px;
+    .navbar-toggler{
+        font-size: 15px;
+        color: #fff;
+        background-color: rgb(233, 225, 203);
     }
-    .logo-navegacion{
-        width: 17px;
-    }
-    .logo-chocolate{
-            width: 35px;
-            height: 35px;
-            margin-left: 15px;
-            margin-top: 17px;
-    }
+
     .logo-chocolate1{
     
-        width: 35px;
-        height: 35px;
-        margin-left: 30px;
-        margin-top: 13px;
+        width: 50px;
+        height: 50px;
+        margin-left: 1px;
+        margin-top: -5px;
 }
 .secundario-inicio{
 
@@ -351,7 +363,7 @@ header.principal-chocolate{
     font-size: 12px;
     line-height: 30px;
 }
-button {
+.boton-principal {
     font-size: 10px;
     padding: 4px 4px;
     margin: 10px;
@@ -359,10 +371,8 @@ button {
     border-radius: 7px;
     
 }
-    .logo{
-        font-size: 12px;
-        top: 20px;
-    }
+    
+    
     
     footer h3{
         
@@ -371,7 +381,7 @@ button {
         font-size: 17px;
     
     }
-    header.nuestra-historia{
+    .nuestra-historia{
         height: 400px;
     }
     .titulo-nuestra{
@@ -408,23 +418,23 @@ button {
     
     }
     .titulo-secundario{
-        font-size: 50px;
+        font-size: 75px;
         position: absolute;
         top: 30%;
-        left: 30%;
+        left: 23%;
         
     }
     
     .gluten-free{
         width: 50px;
-        top:33% ;
-        left: 67%;
+        top:35% ;
+        left: 77%;
 
     }
     .titulo-para-el-te{
-        font-size: 50px;
+        font-size: 75px;
         top: 30%;
-        left: 34%;
+        left: 27%;
     }
     
     .inicio-chocolate{
@@ -446,29 +456,30 @@ button {
 @media(max-width:320px){
     .titulo{
         font-size: 33px;
-        top: 13%;
+        top: 28%;
         left: 20%;
     }
-    header.principal-inicio{
-        height: 180px;
+    .principal-inicio{
+        width: 100%;
+        height: 280px;
 
     }
-    nav ul li {
-        
-        margin: 1px 1px;
+    .navbar-toggler{
+        font-size: 12px;
+        color: #fff;
+        background-color: rgb(233, 225, 203);
+
+    }
     
-    }
-    nav ul li a {
-        font-size: 10px;
-    }
     .logo-navegacion{
         width: 5px;
     }
     .logo-chocolate1{
-        width: 25px;
-        height: 25px;
-        margin-left: 15px;
-        margin-top: 13px;
+        width: 43px;
+        height: 43px;
+        margin-left: -2px;
+        margin-top: -5px;
+
     }
 
     footer h3{
@@ -491,7 +502,7 @@ button {
         line-height: 20px;
         padding: 10px 10px;
     }
-    button {
+    .boton-principal {
         font-size: 10px;
         padding: 4px 4px;
         margin: 5px;
@@ -499,18 +510,17 @@ button {
         border-radius: 7px;
         
     }
-    .logo{
-        display: none;
-    }
     
     
-    header.nuestra-historia{
-        height: 180px;
+    .nuestra-historia{
+        width: 100%;
+        height: 280px;
+
     }
     .titulo-nuestra{
-        font-size: 25px;
-        top: 15%;
-        left: 20%;
+        font-size: 33px;
+        top: 28%;
+        left: 12%;
     }
     .h2-nuestra{
         font-size: 14px;
@@ -545,25 +555,27 @@ button {
     .titulo-secundario{
         font-size: 35px;
         position: absolute;
-        top: 20%;
+        top: 28%;
         left: 20%;
 
         
     }
-    header.principal-chocolate{
-        height: 180px;
+    .principal-chocolate{
+        width: 100%;
+        height: 280px;
+
     }
     
     .gluten-free{
         width: 30px;
-        top:23% ;
+        top:30% ;
         left: 80%;
         
 
     }
     .titulo-para-el-te{
         font-size: 35px;
-        top: 20%;
+        top: 28%;
         left: 25%;
     }
     
