--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,17 @@ body{
     background-repeat:no-repeat ;
     width: 100%;
     height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
    
     
 }
 .bg-css{
   background-color: #5e3939;
   z-index: 10;
+  position: fixed;
+  width: 100%;
 }
 .bg-colores{
     color: #fcfcfc;
@@ -33,9 +38,6 @@ body{
     color: #fff;
     font-size: 70px;
     font-weight: 600;
-    position: absolute;
-    top: 30%;
-    left: 30%;
     transform: translate(-4%, -4%);
     font-size: 80px;
     -webkit-text-stroke: 1px #fff;
@@ -102,6 +104,9 @@ footer{
     background-repeat:no-repeat ;
     width: 100%;
     height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -118,9 +123,6 @@ footer{
     color: #fff;
     font-weight: 300;
     font-size: 80px;
-    position: absolute;
-    top: 30%;
-    left: 27%;
 }
 
 .parrafo-inicio-nuestra{
@@ -184,16 +186,11 @@ footer{
     color: #fff;
     font-weight: 300;
     font-size: 80px;
-    position: absolute;
-    top: 30%;
-    left: 33%;
     
 }
 
 .gluten-free{
-    position: absolute;
-    top:35% ;
-    left: 67%;
+    
     width: 60px;
 }
 .titulo-para-el-te{
@@ -201,9 +198,7 @@ footer{
     color: #fff;
     font-weight: 300;
     font-size: 80px;
-    position: absolute;
-    top: 30%;
-    left: 37%;
+    
 }
 
 .inicio-chocolate{
@@ -220,6 +215,9 @@ footer{
     background-color:rgb(107, 72, 61) ;
     width: 100%;
     height: 400px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
 .secundario-inicio{
 
@@ -288,10 +286,6 @@ footer{
 }
 
 @media(max-width:1024px){
-    .titulo{
-        top: 40%;
-        left: 26%;
-    }
     
     footer h3{
         
@@ -301,27 +295,19 @@ footer{
     }
     .titulo-nuestra{
         font-size: 70px;
-        top: 40%;
-        left: 24%;
     }
     .titulo-secundario{
         font-size: 75px;
-        position: absolute;
-        top: 30%;
-        left: 30%;
         
     }
     
     .gluten-free{
         width: 50px;
-        top:35% ;
-        left: 70%;
+
 
     }
     .titulo-para-el-te{
         font-size: 75px;
-        top: 30%;
-        left: 34%;
     }
 
 
@@ -331,8 +317,7 @@ footer{
 @media(max-width:768px){
     .titulo{
         font-size: 70px;
-        top: 30%;
-        left: 23%;
+        
     }
     .principal-inicio{
         height: 400px;
@@ -386,8 +371,7 @@ footer{
     }
     .titulo-nuestra{
         font-size: 50px;
-        top: 30%;
-        left: 26%;
+        
     }
     .h2-nuestra{
         font-size: 20px;
@@ -419,22 +403,15 @@ footer{
     }
     .titulo-secundario{
         font-size: 75px;
-        position: absolute;
-        top: 30%;
-        left: 23%;
         
     }
     
     .gluten-free{
         width: 50px;
-        top:35% ;
-        left: 77%;
 
     }
     .titulo-para-el-te{
         font-size: 75px;
-        top: 30%;
-        left: 27%;
     }
     
     .inicio-chocolate{
@@ -456,8 +433,6 @@ footer{
 @media(max-width:320px){
     .titulo{
         font-size: 33px;
-        top: 28%;
-        left: 20%;
     }
     .principal-inicio{
         width: 100%;
@@ -519,8 +494,6 @@ footer{
     }
     .titulo-nuestra{
         font-size: 33px;
-        top: 28%;
-        left: 12%;
     }
     .h2-nuestra{
         font-size: 14px;
@@ -554,9 +527,6 @@ footer{
     }
     .titulo-secundario{
         font-size: 35px;
-        position: absolute;
-        top: 28%;
-        left: 20%;
 
         
     }
@@ -568,15 +538,11 @@ footer{
     
     .gluten-free{
         width: 30px;
-        top:30% ;
-        left: 80%;
         
 
     }
     .titulo-para-el-te{
         font-size: 35px;
-        top: 28%;
-        left: 25%;
     }
     
     .inicio-chocolate{
