sass completo y terminado + seo + animación

--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,12 +1,13 @@
 footer{
+    @include flex3(flex,center);
     background-image:linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),  url("../img/coffeefy-workafe-sQSouGcgeVA-unsplash.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
     height: 100px;
-    display: flex;
-    justify-content: center;
+    
+    
     h3{
         color:map-get($colores, color3);
         font-weight:lighter;
