--- a/css/style.css
+++ b/css/style.css
@@ -8,25 +8,21 @@ body {
   background-color: #e9e1cb;
   font-family: 'poppins' , sans-serif; }
 
-@font-face {
-  font-family: general;
-  src: url(../assets/fonts/Caramella_Regular.ttf); }
-
 .logo-chocolate1 {
   width: 40px;
   height: 40px;
   transform: rotate(90deg); }
 
 .principal-inicio {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/jason-leung-3ftFEjJo7u0-unsplash.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
-  height: 500px;
-  display: flex;
-  justify-content: center;
-  align-items: center; }
+  height: 500px; }
 
 .titulo {
   color: #ffffff;
@@ -51,6 +47,14 @@ section article {
   text-align: center;
   color: #4e332b; }
 
+.secundario-inicio {
+  font-size: 30px;
+  border-bottom: 1px solid #4e332b;
+  width: 60%;
+  margin: 0 auto;
+  margin-top: 80px;
+  margin-bottom: 5px; }
+
 .parrafo-inicio {
   padding: 20px 100px;
   display: block;
@@ -59,16 +63,27 @@ section article {
   font-size: 17px;
   line-height: 40px; }
 
+.boton-principal {
+  background-color: #000000;
+  color: #ffffff;
+  padding: 3px 3px;
+  border: solid #000000;
+  margin: 10px;
+  margin-bottom: 20px;
+  border-radius: 7px;
+  font-weight: 200;
+  font-size: 13px; }
+
 .nuestra-historia {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-image: url("../img/cacao-corazón-chocolate-riesgo-cardiovascular.jpeg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
-  height: 500px;
-  display: flex;
-  justify-content: center;
-  align-items: center; }
+  height: 500px; }
 
 .titulo-nuestra {
   text-decoration: none;
@@ -77,27 +92,27 @@ section article {
   font-size: 80px; }
 
 .parrafo-inicio-nuestra {
-  padding: 0 100px;
   display: block;
+  text-align: center;
+  padding: 0 100px;
   width: 70%;
   margin: 0 auto;
   font-size: 17px;
   line-height: 40px;
   border-bottom: 1px solid #4e332b;
   margin-bottom: 110px;
-  color: #4e332b;
-  text-align: center; }
+  color: #4e332b; }
 
 .parrafo-nuestrah {
+  display: block;
+  text-align: center;
   color: #ffff;
   margin: 30px;
-  text-align: center;
   background-color: #6b483d;
   width: 100%;
   height: 500px;
   box-sizing: 0;
   padding: 100px;
-  display: block;
   margin: 0 auto;
   line-height: 40px; }
 
@@ -120,12 +135,12 @@ section article {
   padding-bottom: 70px; }
 
 .principal-chocolate {
-  background-color: #6b483d;
-  width: 100%;
-  height: 400px;
+  display: flex;
   justify-content: center;
   align-items: center;
-  display: flex; }
+  background-color: #6b483d;
+  width: 100%;
+  height: 400px; }
 
 .titulo-secundario {
   text-decoration: none;
@@ -143,8 +158,8 @@ section article {
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
   justify-content: center;
+  grid-template-columns: repeat(4, 1fr);
   column-gap: 20px; }
 
 .productos {
@@ -154,7 +169,12 @@ section article {
 
 .productos img {
   max-width: 100%;
-  height: auto; }
+  height: auto;
+  transition: 1s;
+  cursor: pointer; }
+  .productos img:hover {
+    transform: scale(1.1);
+    transition: 1s; }
 
 .productos h3 {
   font-size: 13px;
@@ -184,14 +204,14 @@ section article {
   font-size: 80px; }
 
 footer {
+  display: flex;
+  justify-content: center;
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/coffeefy-workafe-sQSouGcgeVA-unsplash.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
-  height: 100px;
-  display: flex;
-  justify-content: center; }
+  height: 100px; }
   footer h3 {
     color: #ffffff;
     font-weight: lighter;
@@ -200,86 +220,18 @@ footer {
     margin-left: 200px;
     font-size: 20px; }
 
-@media (max-width: 320px) {
-  .titulo {
-    font-size: 33px; }
-  .principal-inicio {
-    width: 100%;
-    height: 280px; }
-  .navbar-toggler {
-    font-size: 12px;
-    color: #fff;
-    background-color: #e9e1cb; }
-  .logo-navegacion {
-    width: 5px; }
-  .logo-chocolate1 {
-    width: 43px;
-    height: 43px;
-    margin-left: -2px;
-    margin-top: -5px; }
+@media (max-width: 1024px) {
   footer h3 {
-    margin-right: 15px;
-    margin-left: 37px;
-    font-size: 12px; }
-  .secundario-inicio {
-    font-size: 14px;
-    width: 70%;
-    margin-top: 50px; }
-  .parrafo-inicio {
-    width: 90%;
-    font-size: 10px;
-    line-height: 20px;
-    padding: 10px 10px; }
-  .boton-principal {
-    font-size: 10px;
-    padding: 4px 4px;
-    margin: 5px;
-    margin-bottom: 15px;
-    border-radius: 7px; }
-  .nuestra-historia {
-    width: 100%;
-    height: 280px; }
+    margin-right: 120px;
+    margin-left: 170px; }
   .titulo-nuestra {
-    font-size: 33px; }
-  .h2-nuestra {
-    font-size: 14px;
-    margin-bottom: 20px; }
-  .parrafo-inicio-nuestra {
-    width: 90%;
-    font-size: 10px;
-    line-height: 20px;
-    margin-bottom: 35px;
-    padding: 10px 10px; }
-  .la-receta {
-    margin: 10px;
-    padding-bottom: 20px;
-    font-size: 25px; }
-  .parrafo-nuestrah {
-    font-size: 10px;
-    width: 100%;
-    height: 450px;
-    padding: 10px 10px;
-    line-height: 25px; }
+    font-size: 70px; }
   .titulo-secundario {
-    font-size: 35px; }
-  .principal-chocolate {
-    width: 100%;
-    height: 280px; }
+    font-size: 75px; }
   .gluten-free {
-    width: 30px; }
+    width: 50px; }
   .titulo-para-el-te {
-    font-size: 35px; }
-  .inicio-chocolate {
-    font-size: 15px;
-    margin-top: 45px;
-    margin-left: 45px;
-    margin-bottom: 10px; }
-  .grid-container {
-    grid-template-columns: repeat(2, 1fr); }
-  .productos h3 {
-    font-size: 10px; }
-  .productos p {
-    font-size: 10px; } }
+    font-size: 75px; } }
 
 @media (max-width: 768px) {
   .titulo {
@@ -348,18 +300,84 @@ footer {
   .productos p {
     font-size: 12px; } }
 
-@media (max-width: 1024px) {
+@media (max-width: 320px) {
+  .navbar-toggler {
+    font-size: 12px;
+    color: #fff;
+    background-color: #e9e1cb; }
+  .logo-chocolate1 {
+    width: 43px;
+    height: 43px;
+    margin-left: -2px;
+    margin-top: -5px; }
+  .principal-inicio {
+    width: 100%;
+    height: 280px; }
+  .titulo {
+    font-size: 33px; }
+  .secundario-inicio {
+    font-size: 14px;
+    width: 70%;
+    margin-top: 50px; }
+  .parrafo-inicio {
+    width: 90%;
+    font-size: 10px;
+    line-height: 20px;
+    padding: 10px 10px; }
+  .boton-principal {
+    font-size: 10px;
+    padding: 4px 4px;
+    margin: 5px;
+    margin-bottom: 15px;
+    border-radius: 7px; }
   footer h3 {
-    margin-right: 120px;
-    margin-left: 170px; }
+    margin-right: 15px;
+    margin-left: 37px;
+    font-size: 12px; }
+  .nuestra-historia {
+    width: 100%;
+    height: 280px; }
   .titulo-nuestra {
-    font-size: 70px; }
+    font-size: 33px; }
+  .h2-nuestra {
+    font-size: 14px;
+    margin-bottom: 5px; }
+  .parrafo-inicio-nuestra {
+    width: 90%;
+    font-size: 10px;
+    line-height: 20px;
+    margin-bottom: 35px;
+    padding: 10px 10px; }
+  .la-receta {
+    margin: 10px;
+    padding-bottom: 20px;
+    font-size: 25px; }
+  .parrafo-nuestrah {
+    font-size: 10px;
+    width: 100%;
+    height: 450px;
+    padding: 10px 10px;
+    line-height: 25px; }
   .titulo-secundario {
-    font-size: 75px; }
+    font-size: 35px; }
+  .principal-chocolate {
+    width: 100%;
+    height: 280px; }
   .gluten-free {
-    width: 50px; }
+    width: 30px; }
   .titulo-para-el-te {
-    font-size: 75px; } }
+    font-size: 35px; }
+  .inicio-chocolate {
+    font-size: 15px;
+    margin-top: 45px;
+    margin-left: 45px;
+    margin-bottom: 10px; }
+  .grid-container {
+    grid-template-columns: repeat(2, 1fr); }
+  .productos h3 {
+    font-size: 10px; }
+  .productos p {
+    font-size: 10px; } }
 
 .bg-css {
   background-color: #5e3939;
@@ -369,14 +387,3 @@ footer {
 
 .bg-colores {
   color: #ffffff; }
-
-.boton-principal {
-  background-color: #000000;
-  color: #ffffff;
-  padding: 3px 3px;
-  border: solid #000000;
-  margin: 10px;
-  margin-bottom: 20px;
-  border-radius: 7px;
-  font-weight: 200;
-  font-size: 13px; }
