--- a/scss/layout/_main-productos.scss
+++ b/scss/layout/_main-productos.scss
@@ -1,10 +1,9 @@
 .principal-chocolate{
+    @include flex(flex,center,center);
     background-color: map-get($colores, color6 ) ;
     width: 100%;
     height: 400px;
-    justify-content: center;
-    align-items: center;
-    display: flex;
+
 }
 .titulo-secundario{
     text-decoration: none;
@@ -23,9 +22,8 @@
 
 }
 .grid-container{
-    display: grid;
+    @include flex3(grid,center);
     grid-template-columns:  repeat(4, 1fr);
-    justify-content: center;
     column-gap: 20px;
 }
 .productos{
@@ -37,6 +35,12 @@
     img{
         max-width: 100%;
         height: auto;
+        transition: 1s;
+        cursor: pointer;
+        &:hover{
+            transform: scale(1.1);
+            transition: 1s;
+        }
     }
     h3{
         font-size:13px;
