--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import "./utilities/maps";
+@import "./utilities/mixins";
 @import "./base/reset";
 @import "./layout/main-index";
 @import "./layout/main-nuestra";
@@ -6,8 +7,7 @@
 @import "./layout/main-gluten";
 @import "./layout/main-para-el-te";
 @import "./layout/footer";
-@import "./layout/media320";
-@import "./layout/media768";
 @import "./layout/media1024";
+@import "./layout/media768";
+@import "./layout/media320";
 @import "./components/navbar";
-@import "./components/button";
