--- a/scss/layout/_media768.scss
+++ b/scss/layout/_media768.scss
@@ -90,6 +90,16 @@
         font-size: 75px;
         
     }
+    .principal-chocolate{
+        height: 400px;
+    }
+    .principal-chocolate1{
+        height: 400px;
+    }
+    .principal-chocolate2{
+        height: 400px;
+    }
+    
     
     .gluten-free{
         width: 50px;
