--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,44 @@
 @import "./layout/main-para-el-te";
 @import "./layout/footer";
 @import "./layout/media1024";
+@import "./layout/media939";
+@import "./layout/media927";
+@import "./layout/media924";
+@import "./layout/media920";
+@import "./layout/media916";
+@import "./layout/media899";
+@import "./layout/media819";
+@import "./layout/media799";
 @import "./layout/media768";
+@import "./layout/media705";
+@import "./layout/media694";
+@import "./layout/media691";
+@import "./layout/media690";
+@import "./layout/media685";
+@import "./layout/media680";
+@import "./layout/media674";
+@import "./layout/media650";
+@import "./layout/media600";
+@import "./layout/media580";
+@import "./layout/media557";
+@import "./layout/media544";
+@import "./layout/media526";
+@import "./layout/media520";
+@import "./layout/media470";
+@import "./layout/media459";
+@import "./layout/media454";
+@import "./layout/media450";
+@import "./layout/media425";
+@import "./layout/media415";
+@import "./layout/media393";
+@import "./layout/media386";
+@import "./layout/media384";
+@import "./layout/media380";
+@import "./layout/media378";
+@import "./layout/media375";
+@import "./layout/media358";
+@import "./layout/media355";
+@import "./layout/media349";
+@import "./layout/media340";
 @import "./layout/media320";
 @import "./components/navbar";
