--- a/css/style.css
+++ b/css/style.css
@@ -138,9 +138,12 @@ section article {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #6b483d;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/chocolates/rivage-4ewSZirtA7U-unsplash.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   width: 100%;
-  height: 400px; }
+  height: 500px; }
 
 .titulo-secundario {
   text-decoration: none;
@@ -167,15 +170,6 @@ section article {
   margin: 0;
   padding: 30px; }
 
-.productos img {
-  max-width: 100%;
-  height: auto;
-  transition: 1s;
-  cursor: pointer; }
-  .productos img:hover {
-    transform: scale(1.1);
-    transition: 1s; }
-
 .productos h3 {
   font-size: 13px;
   margin-bottom: 30px;
@@ -191,11 +185,44 @@ section article {
   text-align: left;
   color: #4e332b; }
 
+.div {
+  overflow: hidden; }
+  .div img {
+    max-width: 100%;
+    height: auto;
+    transition: 1s;
+    cursor: pointer; }
+    .div img:hover {
+      transform: scale(1.1);
+      transition: 1s; }
+
 .nombre-producto {
   font-weight: 600; }
 
+.principal-chocolate2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/gluten-free/julian-hochgesang-huepD-06_pQ-unsplash.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 500px; }
+
 .gluten-free {
   width: 60px; }
+
+.principal-chocolate1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/para-el-te/kris-atomic-3b2tADGAWnU-unsplash.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 500px; }
 
 .titulo-para-el-te {
   text-decoration: none;
@@ -232,6 +259,67 @@ footer {
     width: 50px; }
   .titulo-para-el-te {
     font-size: 75px; } }
+
+@media (max-width: 939px) {
+  footer h3 {
+    margin-right: 120px;
+    margin-left: 150px; } }
+
+@media (max-width: 927px) {
+  footer h3 {
+    margin-right: 120px;
+    margin-left: 140px; }
+  .parrafo-nuestrah {
+    width: 100%;
+    height: 500px;
+    padding: 80px;
+    line-height: 30px; } }
+
+@media (max-width: 924px) {
+  footer h3 {
+    margin-right: 120px;
+    margin-left: 140px; }
+  .parrafo-nuestrah {
+    width: 100%;
+    height: 500px;
+    padding: 80px;
+    line-height: 30px; } }
+
+@media (max-width: 920px) {
+  footer h3 {
+    margin-right: 120px;
+    margin-left: 150px; }
+  .parrafo-nuestrah {
+    width: 100%;
+    height: 500px;
+    padding: 80px;
+    line-height: 30px; } }
+
+@media (max-width: 916px) {
+  footer h3 {
+    margin-right: 120px;
+    margin-left: 150px; }
+  .parrafo-nuestrah {
+    width: 100%;
+    height: 500px;
+    padding: 80px;
+    line-height: 30px; } }
+
+@media (max-width: 899px) {
+  footer h3 {
+    margin-right: 120px;
+    margin-left: 100px; } }
+
+@media (max-width: 819px) {
+  footer h3 {
+    margin-right: 120px;
+    margin-left: 100px; } }
+
+@media (max-width: 799px) {
+  footer h3 {
+    margin-right: 35px;
+    margin-left: 110px;
+    font-size: 17px; } }
 
 @media (max-width: 768px) {
   .titulo {
@@ -289,6 +377,12 @@ footer {
     line-height: 40px; }
   .titulo-secundario {
     font-size: 75px; }
+  .principal-chocolate {
+    height: 400px; }
+  .principal-chocolate1 {
+    height: 400px; }
+  .principal-chocolate2 {
+    height: 400px; }
   .gluten-free {
     width: 50px; }
   .titulo-para-el-te {
@@ -299,6 +393,530 @@ footer {
     font-size: 10px; }
   .productos p {
     font-size: 12px; } }
+
+@media (max-width: 705px) {
+  .parrafo-nuestrah {
+    width: 100%;
+    height: 500px;
+    padding: 80px;
+    line-height: 30px; } }
+
+@media (max-width: 694px) {
+  .parrafo-nuestrah {
+    width: 100%;
+    height: 500px;
+    padding: 80px;
+    line-height: 30px; } }
+
+@media (max-width: 691px) {
+  .parrafo-nuestrah {
+    width: 100%;
+    height: 500px;
+    padding: 80px;
+    line-height: 30px; } }
+
+@media (max-width: 690px) {
+  .parrafo-nuestrah {
+    width: 100%;
+    height: 500px;
+    padding: 80px;
+    line-height: 30px; } }
+
+@media (max-width: 685px) {
+  .parrafo-nuestrah {
+    width: 100%;
+    height: 500px;
+    padding: 80px;
+    line-height: 30px; } }
+
+@media (max-width: 680px) {
+  .parrafo-nuestrah {
+    width: 100%;
+    height: 500px;
+    padding: 80px;
+    line-height: 30px; } }
+
+@media (max-width: 674px) {
+  .parrafo-nuestrah {
+    font-size: 12px;
+    width: 100%;
+    height: 550px;
+    padding: 80px;
+    line-height: 30px; } }
+
+@media (max-width: 650px) {
+  .titulo {
+    font-size: 50px; }
+  .parrafo-inicio {
+    width: 100%;
+    font-size: 12px;
+    line-height: 30px; }
+  footer h3 {
+    margin-right: 35px;
+    margin-left: 100px;
+    font-size: 16px; }
+  .parrafo-inicio-nuestra {
+    width: 95%;
+    font-size: 12px;
+    line-height: 30px;
+    margin-bottom: 70px; }
+  .la-receta {
+    margin: 10px;
+    padding-bottom: 20px;
+    font-size: 35px; }
+  .parrafo-nuestrah {
+    font-size: 12px;
+    width: 100%;
+    height: 550px;
+    padding: 80px;
+    line-height: 30px; }
+  .titulo-secundario {
+    font-size: 60px; }
+  .gluten-free {
+    width: 50px; }
+  .titulo-para-el-te {
+    font-size: 60px; }
+  .inicio-chocolate {
+    font-size: 19px; }
+  .grid-container {
+    grid-template-columns: repeat(3, 1fr); }
+  .productos h3 {
+    font-size: 10px; }
+  .productos p {
+    font-size: 12px; } }
+
+@media (max-width: 600px) {
+  .titulo {
+    font-size: 50px; }
+  .parrafo-inicio {
+    width: 100%;
+    font-size: 12px;
+    line-height: 30px; }
+  footer h3 {
+    margin-right: 35px;
+    margin-left: 100px;
+    font-size: 16px; }
+  .parrafo-inicio-nuestra {
+    width: 95%;
+    font-size: 12px;
+    line-height: 30px;
+    margin-bottom: 70px; }
+  .la-receta {
+    margin: 10px;
+    padding-bottom: 20px;
+    font-size: 35px; }
+  .parrafo-nuestrah {
+    font-size: 12px;
+    width: 100%;
+    height: 550px;
+    padding: 80px;
+    line-height: 30px; }
+  .titulo-secundario {
+    font-size: 60px; }
+  .gluten-free {
+    width: 50px; }
+  .titulo-para-el-te {
+    font-size: 60px; }
+  .inicio-chocolate {
+    font-size: 19px; }
+  .grid-container {
+    grid-template-columns: repeat(3, 1fr); }
+  .productos h3 {
+    font-size: 10px; }
+  .productos p {
+    font-size: 12px; } }
+
+@media (max-width: 580px) {
+  .titulo {
+    font-size: 50px; }
+  .parrafo-inicio {
+    width: 100%;
+    font-size: 12px;
+    line-height: 30px; }
+  footer h3 {
+    margin-right: 35px;
+    margin-left: 100px;
+    font-size: 16px; }
+  .parrafo-inicio-nuestra {
+    width: 95%;
+    font-size: 12px;
+    line-height: 30px;
+    margin-bottom: 70px; }
+  .la-receta {
+    margin: 10px;
+    padding-bottom: 20px;
+    font-size: 35px; }
+  .parrafo-nuestrah {
+    font-size: 12px;
+    width: 100%;
+    height: 550px;
+    padding: 80px;
+    line-height: 30px; }
+  .titulo-secundario {
+    font-size: 60px; }
+  .gluten-free {
+    width: 50px; }
+  .titulo-para-el-te {
+    font-size: 60px; }
+  .inicio-chocolate {
+    font-size: 19px; }
+  .grid-container {
+    grid-template-columns: repeat(3, 1fr); }
+  .productos h3 {
+    font-size: 10px; }
+  .productos p {
+    font-size: 12px; } }
+
+@media (max-width: 557px) {
+  footer h3 {
+    margin-right: 35px;
+    margin-left: 60px;
+    font-size: 15px; } }
+
+@media (max-width: 544px) {
+  footer h3 {
+    margin-right: 35px;
+    margin-left: 60px;
+    font-size: 15px; }
+  .parrafo-nuestrah {
+    font-size: 12px;
+    width: 100%;
+    height: 570px;
+    padding: 80px;
+    line-height: 30px; } }
+
+@media (max-width: 526px) {
+  footer h3 {
+    margin-right: 35px;
+    margin-left: 60px;
+    font-size: 15px; }
+  .parrafo-nuestrah {
+    font-size: 12px;
+    width: 100%;
+    height: 600px;
+    padding: 70px;
+    line-height: 30px; } }
+
+@media (max-width: 520px) {
+  .titulo {
+    font-size: 50px; }
+  .parrafo-inicio {
+    width: 100%;
+    font-size: 12px;
+    line-height: 30px; }
+  footer h3 {
+    margin-right: 35px;
+    margin-left: 60px;
+    font-size: 15px; }
+  .parrafo-inicio-nuestra {
+    width: 90%;
+    margin-bottom: 45px;
+    padding: 10px 10px; }
+  .parrafo-nuestrah {
+    font-size: 12px;
+    width: 100%;
+    height: 600px;
+    padding: 70px;
+    line-height: 30px; } }
+
+@media (max-width: 470px) {
+  .parrafo-nuestrah {
+    font-size: 12px;
+    width: 100%;
+    height: 530px;
+    padding: 17px 17px;
+    line-height: 30px; } }
+
+@media (max-width: 459px) {
+  footer h3 {
+    margin-right: 15px;
+    margin-left: 34px;
+    font-size: 14px; }
+  .parrafo-nuestrah {
+    font-size: 12px;
+    width: 100%;
+    height: 500px;
+    padding: 17px 17px;
+    line-height: 30px; } }
+
+@media (max-width: 454px) {
+  .parrafo-inicio {
+    width: 90%;
+    font-size: 10px;
+    line-height: 20px;
+    padding: 10px 10px; }
+  footer h3 {
+    margin-right: 15px;
+    margin-left: 34px;
+    font-size: 14px; }
+  .parrafo-nuestrah {
+    font-size: 12px;
+    width: 100%;
+    height: 500px;
+    padding: 17px 17px;
+    line-height: 30px; } }
+
+@media (max-width: 450px) {
+  .parrafo-inicio {
+    width: 90%;
+    font-size: 10px;
+    line-height: 20px;
+    padding: 10px 10px; }
+  footer h3 {
+    margin-right: 15px;
+    margin-left: 34px;
+    font-size: 14px; }
+  .parrafo-nuestrah {
+    font-size: 12px;
+    width: 100%;
+    height: 500px;
+    padding: 17px 17px;
+    line-height: 30px; } }
+
+@media (max-width: 425px) {
+  .titulo {
+    font-size: 40px; }
+  .parrafo-inicio {
+    width: 90%;
+    font-size: 10px;
+    line-height: 20px;
+    padding: 10px 10px; }
+  footer h3 {
+    margin-right: 15px;
+    margin-left: 37px;
+    font-size: 14px; }
+  .titulo-nuestra {
+    font-size: 40px; }
+  .h2-nuestra {
+    margin-bottom: 3px; }
+  .parrafo-inicio-nuestra {
+    width: 80%;
+    font-size: 10px;
+    line-height: 20px;
+    margin-bottom: 35px;
+    padding: 10px 10px; }
+  .parrafo-nuestrah {
+    font-size: 10px;
+    width: 100%;
+    height: 350px;
+    padding: 17px 17px;
+    line-height: 25px; }
+  .titulo-secundario {
+    font-size: 40px; }
+  .gluten-free {
+    width: 34px; }
+  .titulo-para-el-te {
+    font-size: 40px; }
+  .inicio-chocolate {
+    font-size: 15px;
+    margin-top: 45px;
+    margin-left: 45px;
+    margin-bottom: 10px; }
+  .grid-container {
+    grid-template-columns: repeat(2, 1fr); }
+  .productos h3 {
+    font-size: 10px; }
+  .productos p {
+    font-size: 10px; } }
+
+@media (max-width: 415px) {
+  .secundario-inicio {
+    font-size: 14px;
+    width: 70%;
+    margin-top: 50px; } }
+
+@media (max-width: 393px) {
+  .secundario-inicio {
+    font-size: 17px;
+    width: 70%;
+    margin-top: 50px; }
+  .h2-nuestra {
+    font-size: 17px;
+    margin-bottom: 5px; } }
+
+@media (max-width: 386px) {
+  .parrafo-nuestrah {
+    font-size: 10px;
+    width: 100%;
+    height: 400px;
+    padding: 10px 10px;
+    line-height: 25px; } }
+
+@media (max-width: 384px) {
+  footer h3 {
+    margin-right: 15px;
+    margin-left: 34px;
+    font-size: 14px; }
+  .parrafo-nuestrah {
+    font-size: 10px;
+    width: 100%;
+    height: 380px;
+    padding: 10px 10px;
+    line-height: 25px; } }
+
+@media (max-width: 380px) {
+  .secundario-inicio {
+    font-size: 14px;
+    width: 70%;
+    margin-top: 50px; }
+  footer h3 {
+    margin-right: 15px;
+    margin-left: 34px;
+    font-size: 14px; }
+  .parrafo-nuestrah {
+    font-size: 10px;
+    width: 100%;
+    height: 380px;
+    padding: 10px 10px;
+    line-height: 25px; } }
+
+@media (max-width: 378px) {
+  .secundario-inicio {
+    font-size: 17px;
+    width: 70%;
+    margin-top: 50px; }
+  .titulo-nuestra {
+    font-size: 40px; }
+  .h2-nuestra {
+    font-size: 17px;
+    margin-bottom: 5px; }
+  .la-receta {
+    margin: 10px;
+    padding-bottom: 20px;
+    font-size: 30px; }
+  .parrafo-nuestrah {
+    font-size: 10px;
+    width: 100%;
+    height: 380px;
+    padding: 17px 17px;
+    line-height: 25px; } }
+
+@media (max-width: 375px) {
+  .secundario-inicio {
+    font-size: 17px;
+    width: 70%;
+    margin-top: 50px; }
+  .titulo-nuestra {
+    font-size: 40px; }
+  .h2-nuestra {
+    font-size: 17px;
+    margin-bottom: 5px; }
+  .la-receta {
+    margin: 10px;
+    padding-bottom: 20px;
+    font-size: 30px; }
+  .parrafo-nuestrah {
+    font-size: 10px;
+    width: 100%;
+    height: 380px;
+    padding: 17px 17px;
+    line-height: 25px; } }
+
+@media (max-width: 358px) {
+  .parrafo-nuestrah {
+    font-size: 10px;
+    width: 100%;
+    height: 400px;
+    padding: 17px 17px;
+    line-height: 25px; } }
+
+@media (max-width: 355px) {
+  .secundario-inicio {
+    font-size: 14px;
+    width: 70%;
+    margin-top: 50px; } }
+
+@media (max-width: 349px) {
+  .titulo {
+    font-size: 33px; }
+  .secundario-inicio {
+    font-size: 14px;
+    width: 70%;
+    margin-top: 50px; }
+  .parrafo-inicio {
+    width: 90%;
+    font-size: 10px;
+    line-height: 20px;
+    padding: 10px 10px; }
+  .boton-principal {
+    font-size: 10px;
+    padding: 4px 4px;
+    margin: 5px;
+    margin-bottom: 15px;
+    border-radius: 7px; }
+  footer h3 {
+    margin-right: 15px;
+    margin-left: 37px;
+    font-size: 12px; }
+  .nuestra-historia {
+    width: 100%;
+    height: 280px; }
+  .titulo-nuestra {
+    font-size: 33px; }
+  .h2-nuestra {
+    font-size: 14px;
+    margin-bottom: 5px; }
+  .parrafo-inicio-nuestra {
+    width: 90%;
+    font-size: 10px;
+    line-height: 20px;
+    margin-bottom: 35px;
+    padding: 10px 10px; }
+  .la-receta {
+    margin: 10px;
+    padding-bottom: 20px;
+    font-size: 25px; }
+  .parrafo-nuestrah {
+    font-size: 10px;
+    width: 100%;
+    height: 450px;
+    padding: 10px 10px;
+    line-height: 25px; }
+  .titulo-secundario {
+    font-size: 35px; }
+  .principal-chocolate {
+    width: 100%;
+    height: 280px; }
+  .gluten-free {
+    width: 30px; }
+  .titulo-para-el-te {
+    font-size: 35px; }
+  .inicio-chocolate {
+    font-size: 15px;
+    margin-top: 45px;
+    margin-left: 45px;
+    margin-bottom: 10px; }
+  .grid-container {
+    grid-template-columns: repeat(2, 1fr); }
+  .productos h3 {
+    font-size: 10px; }
+  .productos p {
+    font-size: 10px; } }
+
+@media (max-width: 340px) {
+  footer h3 {
+    margin-right: 13px;
+    margin-left: 20px;
+    font-size: 14px; }
+  .secundario-inicio {
+    font-size: 17px;
+    width: 80%;
+    margin-top: 50px; }
+  .parrafo-nuestrah {
+    font-size: 10px;
+    width: 100%;
+    height: 450px;
+    padding: 17px 17px;
+    line-height: 25px; }
+  .principal-chocolate {
+    width: 100%;
+    height: 280px; }
+  .principal-chocolate1 {
+    width: 100%;
+    height: 280px; }
+  .principal-chocolate2 {
+    width: 100%;
+    height: 280px; } }
 
 @media (max-width: 320px) {
   .navbar-toggler {
@@ -361,6 +979,12 @@ footer {
   .titulo-secundario {
     font-size: 35px; }
   .principal-chocolate {
+    width: 100%;
+    height: 280px; }
+  .principal-chocolate1 {
+    width: 100%;
+    height: 280px; }
+  .principal-chocolate2 {
     width: 100%;
     height: 280px; }
   .gluten-free {
