--- a/scss/layout/_main-para-el-te.scss
+++ b/scss/layout/_main-para-el-te.scss
@@ -1,3 +1,13 @@
+.principal-chocolate1{
+    @include flex(flex,center,center);
+    background-image:linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),  url("../img/para-el-te/kris-atomic-3b2tADGAWnU-unsplash.jpg") ;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 500px;
+
+}
 .titulo-para-el-te{
     text-decoration: none;
     color: map-get($colores, color3 );
