--- a/scss/layout/_main-productos.scss
+++ b/scss/layout/_main-productos.scss
@@ -1,8 +1,11 @@
 .principal-chocolate{
     @include flex(flex,center,center);
-    background-color: map-get($colores, color6 ) ;
+    background-image:linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),  url("../img/chocolates/rivage-4ewSZirtA7U-unsplash.jpg") ;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     width: 100%;
-    height: 400px;
+    height: 500px;
 
 }
 .titulo-secundario{
@@ -32,16 +35,6 @@
     padding: 30px;
 }
 .productos{
-    img{
-        max-width: 100%;
-        height: auto;
-        transition: 1s;
-        cursor: pointer;
-        &:hover{
-            transform: scale(1.1);
-            transition: 1s;
-        }
-    }
     h3{
         font-size:13px;
         margin-bottom: 30px;
@@ -56,6 +49,19 @@
         margin-top: 0px;
         text-align: left;
         color: map-get($colores, color4 );
+    }
+}
+.div{
+    overflow: hidden;
+    img{
+        max-width: 100%;
+        height: auto;
+        transition: 1s;
+        cursor: pointer;
+        &:hover{
+            transform: scale(1.1);
+            transition: 1s;
+        }
     }
 }
 .nombre-producto{
